Correction index.html, ajout JSON et JS

--- a/index.html
+++ b/index.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Le Trombinoscope de la WildCodeSchool de Bordeaux</title>
+    <meta name="description"
+        content="WildCardS est le trombinoscope de février 2024 de la Wild Code School de Bordeaux">
+    <title>WildCardS - Trombi WCS Bordeaux 2024</title>
 </head>
+
 <body>
     <header>
-        <h1>WildCardS</h1>
+        <img src="" alt="">
     </header>
-
     <main>
-        <h1>Le Trombinoscope de la WildCodeSchool de Bordeaux</h1>
-
-        <h2>Choisis ton Clan</h2>
-        <div>Team JS</div>
-        <div>Team Data</div>
-        <div>Team Staff</div>
+        <header>
+            <h1>Le Trombinoscope de la WildCodeSchool de Bordeaux</h1>
+            <h2>Choisis ton Clan</h2>
+        </header>
+        <div>
+            <a><img src="" alt=""></a>
+            <a>
+                <h2>Team Data</h2>
+            </a>
+        </div>
+        <div>
+            <a><img src="" alt=""></a>
+            <a>
+                <h2>Team Javascript</h2>
+            </a>
+        </div>
+        <div>
+            <a><img src="" alt=""></a>
+            <a>
+                <h2>Team Staff</h2>
+            </a>
+        </div>
     </main>
 </body>
+
 </html>
