--- a/category.html
+++ b/category.html
@@ -11,17 +11,19 @@
     <header>
         <a href="">RETOUR</a> <!--à ajouter-->
         <img src="" alt="logo with the name of the website" class="logo_wcs">
-        <img src="" alt="" class="logo_category">
+        <img src="" alt="logo of the selected category" class="logo_category">
     </header>
     <main>
         <nav>
         <ul>
-            <li>JAVASCRIPT</li>
-            <li>JAVASCRIPT</li>
-            <li>JAVASCRIPT</li>
+            <li>ESSAI</li> <!--à modifier avec logo ou catégorie selon la version-->
+            <li>ESSAI</li> <!--à modifier avec logo ou catégorie selon la version-->
+            <li>ESSAI</li> <!--à modifier avec logo ou catégorie selon la version-->
         </ul>
         </nav>
-        <section class="cards_grid"></section>
+        <section class="cards_grid">
+            <!--mettre du texte pour tester-->
+        </section>
         <img alt="arrow to go back to the top of the page" class="arrow_up">
     </main>
 </body>
