Correction et commentaires index.html

--- a/index.html
+++ b/index.html
@@ -7,35 +7,48 @@
     <meta name="description"
         content="WildCardS est le trombinoscope de février 2024 de la Wild Code School de Bordeaux">
     <title>WildCardS - Trombi WCS Bordeaux 2024</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!--Header-->
     <header>
         <img src="" alt="">
     </header>
+    <!-- Main content -->
     <main>
         <header>
             <h1>Le Trombinoscope de la WildCodeSchool de Bordeaux</h1>
             <h2>Choisis ton Clan</h2>
         </header>
-        <div>
-            <a><img src="" alt=""></a>
-            <a>
-                <h2>Team Data</h2>
-            </a>
-        </div>
-        <div>
-            <a><img src="" alt=""></a>
-            <a>
-                <h2>Team Javascript</h2>
-            </a>
-        </div>
-        <div>
-            <a><img src="" alt=""></a>
-            <a>
-                <h2>Team Staff</h2>
-            </a>
-        </div>
+        <section>
+            <!-- Carte équipe Data -->
+            <div>
+                <a><img src="" alt=""></a>
+                <a>
+                    <h2>Team Data</h2>
+                </a>
+            </div>
+            <!-- Carte équipe JS -->
+            <div>
+                <a><img src="" alt=""></a>
+                <a>
+                    <h2>Team Javascript</h2>
+                </a>
+            </div>
+            <!-- Carte équipe Staff -->
+            <div>
+                <a><img src="" alt=""></a>
+                <a>
+                    <h2>Team Staff</h2>
+                </a>
+            </div>
+            <!-- Flêches navigation -->
+            <div>
+                <img src="">
+                <img src="">
+            </div>
+        </section>
     </main>
 </body>
 
