ajout version desktop category et css

--- a/category.html
+++ b/category.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trombinoscope | WildCardS</title>
     <favicon></favicon> <!--à ajouter-->
-    <link rel="stylesheet" href="category.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -16,9 +16,24 @@
     <main>
         <nav>
         <ul>
-            <li>ESSAI</li> <!--à modifier avec logo ou catégorie selon la version-->
-            <li>ESSAI</li> <!--à modifier avec logo ou catégorie selon la version-->
-            <li>ESSAI</li> <!--à modifier avec logo ou catégorie selon la version-->
+            <li class="li_logo">
+                <img alt="logo of Python, for DATA" src=""> <!--ajouter le lien-->
+            </li> 
+            <li class="li_text">
+                <p>DATA</p>
+            </li> 
+            <li class="li_logo">
+                <img alt="logo of JavaScript, for Web developers" src=""> <!--ajouter le lien-->
+            </li> 
+            <li class="li_text">
+                <p>JAVASCRIPT</p>
+            </li> 
+            <li class="li_logo">
+                <img alt="logo of Wild Code School, for Staff" src=""> <!--ajouter le lien-->
+            </li> 
+            <li class="li_text">
+                <p>STAFF</p>
+            </li> 
         </ul>
         </nav>
         <section class="cards_grid">
