2è version html + modif css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,10 +16,8 @@
     </header>
     <!-- Main content -->
     <main>
-        <header>
-            <h1>Le Trombinoscope de la WildCodeSchool de Bordeaux</h1>
+            <h1>Bienvenue sur le jeu de cartes / Trombinoscope de la WildCodeSchool de Bordeaux 2024</h1>
             <h2>Choisis ton Clan</h2>
-        </header>
         <section>
             <!-- Carte équipe Data -->
             <div>
@@ -52,4 +49,6 @@
     </main>
 </body>
 
+   </main>
+</body>
 </html>
