--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="WildCardS est le trombinoscope de février 2024 de la Wild Code School de Bordeaux">
-    <title>WildCardS - Trombi WCS Bordeaux 2024</title>
+    <title>Trombinoscope WCS Bordeaux 2024 | WildCardS</title>
+    <favicon></favicon> <!--à ajouter-->
     <link rel="stylesheet" href="style.css">
 </head>
 
