MAJ index.html et style.css

--- a/category.html
+++ b/category.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Découvrez les trois équipes WildCardS : le Staff, les Data et les Javascript">
     <title>Trombinoscope | WildCardS</title>
-    <favicon></favicon> <!--à ajouter-->
+    <link rel="icon" href="images/favicon.png" />
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,7 +17,7 @@
         <img src="images/logowildCard.svg" alt="logo with the name of the website" class="logoWCS">
         <label>
             <input type="text" name="search" id="">
-            <img src="">
+            <img src="images/loupe.svg">
         </label>
     </header>
     <!-- main content -->
@@ -52,7 +52,7 @@
             <!--mettre du texte pour tester-->
         </section>
         <a href="header">
-            <img src="" alt="go back to the top" class="arrowUp">
+            <img src="images/arrow-right.svg" alt="go back to the top" class="arrowUp">
         </a>
         
     </main>
