--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="WildCardS est le trombinoscope de février 2024 de la Wild Code School de Bordeaux">
     <title>Trombinoscope WCS Bordeaux 2024 | WildCardS</title>
-    <favicon></favicon> <!--à ajouter-->
+    <link rel="icon" href="images/favicon.png" />
     <link rel="stylesheet" href="style.css">
 </head>
 
