--- a/category.html
+++ b/category.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Découvrez les trois équipes WildCardS : le Staff, les Data et les Javascript">
-    <title>Trombinoscope | WildCardS</title>
-    <link rel="icon" href="images/favicon.png" />
-    <link rel="stylesheet" href="style.css">
+
+        <title>Trombinoscope | WildCardS</title>
+        <link rel="icon" href="images/favicon.png" />
+        <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <!-- Header -->
     <header id="header">
-        <a href="">RETOUR</a> <!--à ajouter-->
-        <img src="images/logowildCard.svg" alt="logo with the name of the website" class="logoWCS">
-        <label>
-            <input type="text" name="search" id="">
-            <img src="images/loupe.svg">
-        </label>
+        <nav>
+            <a href="">RETOUR</a> <!--à ajouter-->
+            <img src="images/logowildCard.svg" alt="logo with the name of the website" class="logoWCS">
+            <img src="images/logopython.svg">
+        </nav>
     </header>
     <!-- main content -->
     <main>
@@ -50,10 +50,10 @@
         <!-- Grille de cartes -->
         <section>
             <!--mettre du texte pour tester-->
+            <a href="header">
+                <img src="images/arrow-right.svg" alt="go back to the top" class="arrowUp">
+            </a>
         </section>
-        <a href="header">
-            <img src="images/arrow-right.svg" alt="go back to the top" class="arrowUp">
-        </a>
         
     </main>
 </body>
