travail main de category.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!--Header-->
     <header>
-        <img src="" alt="">
+        <img src="images/logowildCard.svg" alt="logo with the name of the website written">
     </header>
     <!-- Main content -->
     <main>
@@ -22,21 +22,21 @@
         <section>
             <!-- Carte équipe Data -->
             <div>
-                <a><img src="" alt=""></a>
+                <a><img src="images/booster/boosterdata.png" alt="paquet de carte avec le logo Python"></a>
                 <a>
                     <h2>Team Data</h2>
                 </a>
             </div>
             <!-- Carte équipe JS -->
             <div>
-                <a><img src="" alt=""></a>
+                <a><img src="images/booster/boosterjs.png" alt="paquet de carte avec le logo Javascript"></a>
                 <a>
                     <h2>Team Javascript</h2>
                 </a>
             </div>
             <!-- Carte équipe Staff -->
             <div>
-                <a><img src="" alt=""></a>
+                <a><img src="images/booster/boosterstaff.png" alt="paquet de carte avec le logo de la Wild code School"></a>
                 <a>
                     <h2>Team Staff</h2>
                 </a>
