--- a/category.html
+++ b/category.html
@@ -14,20 +14,22 @@
     <!-- Header -->
     <header id="header">
         <a href="">RETOUR</a> <!--à ajouter-->
-        <img src="images/logowildCard.svg" alt="logo with the name of the website" class="logoWCS">
-        <label>
-            <input type="text" name="search" id="">
-            <img src="images/loupe.svg">
-        </label>
+        <img src="images/logowildCard.svg" alt="logo with the name of the website written" class="logoWCS">
+        <img src="images/logopython.svg" class="logoTeam">
     </header>
     <!-- main content -->
     <main>
+        <label>
+            <input type="text" name="search">
+            <img src="images/loupe.svg">
+        </label>
         <!-- Bouton de navigation -->
         <ul>
             <li>
                 <button>
                     <p>DATA</p>
-                    <img alt="logo of Python, for DATA" src="images/logopython.svg" class="dataLogo"> <!--ajouter le lien-->
+                    <img alt="logo of Python, for DATA" src="images/logopython.svg" class="dataLogo">
+                    <!--ajouter le lien-->
                 </button>
 
             </li>
@@ -42,7 +44,8 @@
             <li>
                 <button>
                     <p>STAFF</p>
-                    <img alt="logo of Wild Code School, for Staff" src="images/logowildstaff.svg" class="staffLogo"> <!--ajouter le lien-->
+                    <img alt="logo of Wild Code School, for Staff" src="images/logowildstaff.svg" class="staffLogo">
+                    <!--ajouter le lien-->
                 </button>
 
             </li>
@@ -50,11 +53,12 @@
         <!-- Grille de cartes -->
         <section>
             <!--mettre du texte pour tester-->
+            <a href="header">
+                <img src="images/arrow-right.svg" alt="go back to the top" class="arrowUp">
+            </a>
         </section>
-        <a href="header">
-            <img src="images/arrow-right.svg" alt="go back to the top" class="arrowUp">
-        </a>
-        
+
+
     </main>
 </body>
 
