--- a/category.html
+++ b/category.html
@@ -15,9 +15,10 @@
     <!-- Header -->
     <header id="header">
         <nav>
-            <a href="">RETOUR</a> <!--à ajouter-->
-            <img src="images/logowildCard.svg" alt="logo with the name of the website" class="logoWCS">
-            <img src="images/logopython.svg">
+            <a href="images/favicon.png" class="flecheHeader" > <p class="retourHeader">Retour</p></a>
+            
+            <img src="images/logowildCard.svg" alt="Logo with the name of the website" class="logoWCS">
+            <img src="images/logopython.svg" alt="Logo Python" class="logoP">
         </nav>
     </header>
     <!-- main content -->
@@ -51,7 +52,7 @@
         <section>
             <!--mettre du texte pour tester-->
             <a href="header">
-                <img src="images/arrow-right.svg" alt="go back to the top" class="arrowUp">
+                <img src="" alt="go back to the top" class="arrowUp">
             </a>
         </section>
         
