rename js file, add link to js in html, add link to json in js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Trombinoscope WCS Bordeaux 2024 | WildCardS</title>
     <link rel="icon" href="images/favicon.png" />
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
