--- a/category.html
+++ b/category.html
@@ -8,6 +8,7 @@
     <title>Trombinoscope | WildCardS</title>
     <link rel="icon" href="images/favicon.png" />
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
