add change to home page, change font and logo align

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 <body>
     <!--Header-->
-    <header class="main">
+    <header class="main-pages">
         <img src="images/logowildCard.svg" alt="logo WildCards">
     </header>
     <!-- Main content -->
     <main>
-        <p>Bienvenue sur le jeu de cartes / Trombinoscope de la WildCodeSchool de Bordeaux 2024</p>
+        <p>Bienvenue sur le jeu de cartes / trombinoscope de la WildCodeSchool de Bordeaux 2024</p>
         <h2>Choisis ton Clan</h2>
-        <section>
+        <section class="carousel">
             <!-- Carte équipe Data -->
             <div>
                 <a><img class="booster" src="images/booster/boosterdata.png" alt="paquet de carte data"></a>
