--- a/category.html
+++ b/category.html
@@ -14,9 +14,13 @@
 <body>
     <!-- Header -->
     <header id="header">
-        <a href="">RETOUR</a> <!--à ajouter-->
-        <img src="images/logowildCard.svg" alt="logo with the name of the website written" class="logoWCS">
-        <img src="images/logopython.svg" class="logoTeam">
+        <nav>
+            <a href="index.html" class="btnRetour">
+                <p class="retour">RETOUR</p><img src="images/arrow-left-svgrepo-com.svg">
+            </a>
+            <img src="images/logowildCard.svg" alt="logo with the name of the website written" class="logoWCS">
+            <img src="images/logopython.svg" class="logoTeam">
+        </nav>
     </header>
     <!-- main content -->
     <main>
@@ -58,8 +62,8 @@
                 <img src="images/arrow-right.svg" alt="go back to the top" class="arrowUp">
             </a>
         </section>
-
-
+        <div class="backgroundImg"><img src="images/logopythonbackground.svg"
+                alt="image de fond avec le logo de l'équipe"></div>
     </main>
 </body>
 
