add class in section of index.html, link json to js, add new css temporary file for js

--- a/category.html
+++ b/category.html
@@ -8,7 +8,8 @@
     <title>Trombinoscope | WildCardS</title>
     <link rel="icon" href="images/favicon.png" />
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="cssforjs.css"> <!--fichier temporaire-->
+    <script type="module" src="script.js"></script>
 </head>
 
 <body>
@@ -52,7 +53,7 @@
             </li>
         </ul>
         <!-- Grille de cartes -->
-        <section>
+        <section id="section-cards">
             <!--mettre du texte pour tester-->
             <a href="header">
                 <img src="images/arrow-right.svg" alt="go back to the top" class="arrowUp">
