--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Trombinoscope WCS Bordeaux 2024 | WildCardS</title>
     <link rel="icon" href="images/favicon.png" />
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="cssforjs.css"> <!--fichier temporaire-->
+    <script type="module" src="script.js"></script>
 </head>
 
 <body>
@@ -21,7 +22,7 @@
     <main>
         <p>Bienvenue sur le jeu de cartes / Trombinoscope de la WildCodeSchool de Bordeaux 2024</p>
         <h2>Choisis ton Clan</h2>
-        <section>
+        <section class="boosters">
             <!-- Carte équipe Data -->
             <div>
                 <a><img class="booster" src="images/booster/boosterdata.png" alt="paquet de carte data"></a>
