add cards on category mobile version

--- a/category.html
+++ b/category.html
@@ -54,11 +54,12 @@
         </ul>
         <!-- Grille de cartes -->
         <section id="section-cards">
-            <!--mettre du texte pour tester-->
+          <!-- URL DE LA FLECHE CI-DESSOUS A CHANGER
             <a href="header">
                 <img src="images/arrow-right.svg" alt="go back to the top" class="arrowUp">
             </a>
         </section>
+        -->
 
 
     </main>
