retour au CSS de du commit ffd63df

--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
         <h2>Choisis ton Clan</h2>
         <section class="carousel">
             <!-- Carte équipe Data -->
-            <div>
-                <a><img class="booster" src="images/booster/boosterdata.png" alt="paquet de carte data"></a>
+            <div class="boosterData">
+                <a class="booster"><img src="images/booster/boosterdata.png" alt="paquet de carte data"></a>
                 <a>
                     <h2>Team Data</h2>
                 </a>
             </div>
             <!-- Carte équipe JS -->
-            <div>
-                <a><img class="booster" src="images/booster/boosterjs.png" alt="paquet de carte JS"></a>
+            <div class="boosterJs">
+                <a class="booster"><img src="images/booster/boosterjs.png" alt="paquet de carte JS"></a>
                 <a>
                     <h2>Team JS</h2>
                 </a>
-            </div>
+            </div class="boosterStaff">
             <!-- Carte équipe Staff -->
             <div>
-                <a><img class="booster" src="images/booster/boosterstaff.png" alt="paquet de carte staff"></a>
+                <a class="booster"><img src="images/booster/boosterstaff.png" alt="paquet de carte staff"></a>
                 <a>
                     <h2>Team Staff</h2>
                 </a>
