--- a/index.html
+++ b/index.html
@@ -21,33 +21,34 @@
     <main>
         <p>Bienvenue sur le jeu de cartes / trombinoscope de la WildCodeSchool de Bordeaux 2024</p>
         <h2>Choisis ton Clan</h2>
-        <section class="carousel">
+        <section class="sliderContainer">
             <!-- Carte équipe Data -->
-            <div>
-                <a><img class="booster" src="images/booster/boosterdata.png" alt="paquet de carte data"></a>
+            <div class="slides">
+                <a class="booster" id="boosterData"><img src="images/booster/boosterdata.png" alt="paquet de carte data"></a>
                 <a>
                     <h2>Team Data</h2>
                 </a>
             </div>
             <!-- Carte équipe JS -->
-            <div>
-                <a><img class="booster" src="images/booster/boosterjs.png" alt="paquet de carte JS"></a>
+            <div class="slides" id="middle">
+                <a class="booster" id="boosterJS"><img src="images/booster/boosterjs.png" alt="paquet de carte JS"></a>
                 <a>
                     <h2>Team JS</h2>
                 </a>
             </div>
             <!-- Carte équipe Staff -->
-            <div>
-                <a><img class="booster" src="images/booster/boosterstaff.png" alt="paquet de carte staff"></a>
+            <div class="slides">
+                <a class="booster" id="boosterStaff"><img src="images/booster/boosterstaff.png"
+                        alt="paquet de carte staff"></a>
                 <a>
                     <h2>Team Staff</h2>
                 </a>
             </div>
             <!-- Flêches navigation -->
-            <div>
+            <!-- <div>
                 <img src="">
                 <img src="">
-            </div>
+            </div> -->
         </section>
     </main>
 </body>
