correction CSS index et category

--- a/index.html
+++ b/index.html
@@ -15,39 +15,34 @@
 <body>
     <!--Header-->
     <header class="main">
-        <img src="images/logowildCard.svg" alt="logo WildCards">
+        <img src="images/logowildCard.svg" alt="logo WildCards" class="logoWCS">
     </header>
     <!-- Main content -->
     <main>
         <p>Bienvenue sur le jeu de cartes / Trombinoscope de la WildCodeSchool de Bordeaux 2024</p>
         <h2>Choisis ton Clan</h2>
-        <section>
+        <section class="sliderContainer">
             <!-- Carte équipe Data -->
-            <div>
-                <a><img class="booster" src="images/booster/boosterdata.png" alt="paquet de carte data"></a>
-                <a>
+            <div class="slides">
+                <a href="category.html" class="booster" id="boosterData" ><img src="images/booster/boosterdata.png" alt="paquet de carte data"></a>
+                <a href="category.html">
                     <h2>Team Data</h2>
                 </a>
             </div>
             <!-- Carte équipe JS -->
-            <div>
-                <a><img class="booster" src="images/booster/boosterjs.png" alt="paquet de carte JS"></a>
-                <a>
+            <div class="slides">
+                <a href="category.html" class="booster" id="boosterJS"><img src="images/booster/boosterjs.png" alt="paquet de carte JS"></a>
+                <a href="category.html">
                     <h2>Team JS</h2>
                 </a>
             </div>
             <!-- Carte équipe Staff -->
-            <div>
-                <a><img class="booster" src="images/booster/boosterstaff.png" alt="paquet de carte staff"></a>
-                <a>
+            <div class="slides">
+                <a href="category.html" class="booster" id="boosterStaff"><img src="images/booster/boosterstaff.png" alt="paquet de carte staff"></a>
+                <a href="category.html">
                     <h2>Team Staff</h2>
                 </a>
-            </div>
-            <!-- Flêches navigation -->
-            <div>
-                <img src="">
-                <img src="">
-            </div>
+            </div class="boosterStaff">
         </section>
     </main>
 </body>
