add effect hover

--- a/category.html
+++ b/category.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- Header -->
-    <header id="header">
+    <header>
         <a href="">RETOUR</a> <!--à ajouter-->
         <img src="images/logowildCard.svg" alt="logo with the name of the website written" class="logoWCS">
         <img src="images/logopython.svg" class="logoTeam">
