Insertion fichier search.js

--- a/category.html
+++ b/category.html
@@ -9,7 +9,9 @@
         <title>Trombinoscope | WildCardS</title>
         <link rel="icon" href="images/favicon.png" />
         <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js">
+            type="module" src="search.js">
+    </script>
 </head>
 
 <body>
@@ -60,8 +62,9 @@
             <!--mettre du texte pour tester-->
             <a href="header">
                 <img src="images/arrow-right.svg" alt="go back to the top" class="arrowUp">
-            </a>
+            </a> -->
         </section>
+    
 
 
     </main>
