add id in category.html, comment last div in category.html, modify all script.js and cssforjs.css

--- a/category.html
+++ b/category.html
@@ -31,7 +31,7 @@
         <!-- Bouton de navigation -->
         <ul>
             <li>
-                <button>
+                <button id="buttonData">
                     <p>DATA</p>
                     <img alt="logo of Python, for DATA" src="images/logopython.svg" class="dataLogo">
                     <!--ajouter le lien-->
@@ -39,7 +39,7 @@
 
             </li>
             <li>
-                <button>
+                <button id="buttonJS">
                     <p>JAVASCRIPT</p>
                     <img alt="logo of JavaScript, for Web developers" src="images/logojs.svg" class="javascriptLogo">
                     <!--ajouter le lien-->
@@ -47,7 +47,7 @@
 
             </li>
             <li>
-                <button>
+                <button id="buttonStaff">
                     <p>STAFF</p>
                     <img alt="logo of Wild Code School, for Staff" src="images/logowildstaff.svg" class="staffLogo">
                     <!--ajouter le lien-->
@@ -62,8 +62,8 @@
                 <img src="images/arrow-right.svg" alt="go back to the top" class="arrowUp">
             </a>  -->
         </section>
-        <div class="backgroundImg"><img src="images/logopythonbackground.svg"
-                alt="image de fond avec le logo de l'équipe"></div>
+        <!-- <div class="backgroundImg"><img src="images/logopythonbackground.svg"
+                alt="image de fond avec le logo de l'équipe"></div> -->
     </main>
     <script type="module" src="script.js"></script>
 </body>
