mise à jour avec search bar

--- a/category.html
+++ b/category.html
@@ -9,7 +9,7 @@
         <title>Trombinoscope | WildCardS</title>
         <link rel="icon" href="images/favicon.png" />
         <link rel="stylesheet" href="style.css">
-    <script src="script.js">
+        <script src="script.js">
             type="module" src="search.js">
     </script>
 </head>
@@ -27,6 +27,8 @@
     <!-- main content -->
     <main>
         <label>
+            <!-- Création conditions loupe: <input type="search" class="searchInput" name="term" autocomplete="off" placeholder="Search..." id="search-input"> -->
+            <!-- <input type="hidden" name="language" value="fr"> -->   
             <input type="text" name="search">
             <img src="images/loupe.svg">
         </label>
@@ -68,6 +70,9 @@
 
 
     </main>
+    <script src="script.js">
+        type="module" src="search.js">
+    </script>   
 </body>
 
 </html>
