scroll mobile and responsive

--- a/category.html
+++ b/category.html
@@ -27,7 +27,7 @@
     <main>
         <label>
             <input type="text" name="search">
-            <img src="images/loupe.svg">
+            <img src="images/search-svgrepo-com.svg">
         </label>
         <!-- Bouton de navigation -->
         <ul>
@@ -58,7 +58,7 @@
         </ul>
         <!-- Grille de cartes -->
         <section id="section-cards">
-          <!-- URL DE LA FLECHE CI-DESSOUS A CHANGER
+            <!-- URL DE LA FLECHE CI-DESSOUS A CHANGER
             <a href="header">
                 <img src="images/arrow-right.svg" alt="go back to the top" class="arrowUp">
             </a>  -->
