--- a/category.html
+++ b/category.html
@@ -13,7 +13,6 @@
 
 <body>
     <!-- Header -->
-    <header id="header">
     <header>
         <nav>
             <a href="index.html" class="btnRetour">
@@ -25,12 +24,14 @@
     </header>
     <!-- main content -->
     <main>
-        <label>
-            <!-- Création conditions loupe: <input type="search" class="searchInput" name="term" autocomplete="off" placeholder="Taper un nom" id="search-input"> -->
-            <!-- <input type="hidden" name="language" value="fr"> -->   
-            <input type="text" name="search">
-            <img src="images/loupe.svg">
-        </label>
+         <label>
+            <!-- Création conditions loupe: <input type="search" class="searchInput" name="term" autocomplete="off" 
+                          placeholder="Taper un nom" id="search-input"> -->
+                <!-- <input type="hidden" name="language" value="fr"> -->   
+                <input type="search" name="search" autocomplete="off" placeholder=" Taper un nom">
+                <img src="images/search-svgrepo-com.svg">
+            </label>
+            
         <!-- Bouton de navigation -->
         <ul>
             <li>
@@ -63,16 +64,13 @@
           <!-- URL DE LA FLECHE CI-DESSOUS A CHANGER
             <a href="header">
                 <img src="images/arrow-right.svg" alt="go back to the top" class="arrowUp">
-            </a> -->
-            </a>
+            </a>  -->
         </section>
-    
-
-
         <!-- <div class="backgroundImg"><img src="images/logopythonbackground.svg"
                 alt="image de fond avec le logo de l'équipe"></div> -->
     </main>
     <script type="module" src="script.js"></script>
+    <script type="module" src="search.js"></script>
 </body>
 
 </html>
