--- a/category.html
+++ b/category.html
@@ -9,6 +9,8 @@
     <link rel="icon" href="images/favicon.png" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="cssforjs.css"> <!--fichier temporaire-->
+    <link rel="stylesheet" href="zoom.css"> <!--fichier temporaire-->
+
 </head>
 
 <body>
@@ -57,10 +59,36 @@
         </ul>
         <!-- Grille de cartes -->
         <section id="section-cards">
-          <!-- URL DE LA FLECHE CI-DESSOUS A CHANGER
+            <!-- URL DE LA FLECHE CI-DESSOUS A CHANGER
             <a href="header">
                 <img src="images/arrow-right.svg" alt="go back to the top" class="arrowUp">
             </a>  -->
+            <div class="zoomBlurBackground">
+                <div></div>
+                <div class="blackBackground">
+                    <div class="zoomedCard">
+                        <div class="zoomedCardHeader">
+                            <p class="zoomedCardName"></p>
+                            <img src="images/logopython.svg" class="zoomedCardLogo">
+                           </div>
+                        <div class="zoomedCardPictureContainer"><img src="images/photos/profilepic8.jpg" class="zoomedCardPicture"></div>
+                        <div class="zoomedCardAttack"><p></p></div>
+                    </div>
+                    <div class="zoomedCardInfo">
+                        <p class="cardBio">treshrsdh</p>
+                        <ul class="cardHard"></ul>
+                        <ul class="cardSoft"></ul>
+                        <p class="cardGoals"></p>
+                        <p class="cardEmail">franck@gmail.com</p>
+                        <div class="socialLink">
+                            <a href=""><img src="images/logoLinkedin.svg" alt="logo LinkedIn"></a>
+                            <a href=""><img src="images/logoX.svg" alt="logo X / Twitter"></a>
+                            <a href=""><img src="images/logogihub.svg" alt="logo github"></a>
+                        </div>
+                    </div>
+                    <img src="images/croix.svg" class="closeButton">
+                </div>
+            </div>
         </section>
         <!-- <div class="backgroundImg"><img src="images/logopythonbackground.svg"
                 alt="image de fond avec le logo de l'équipe"></div> -->
