modification script.js, pictures, cssforjs.js, add id/classes in category.html

--- a/category.html
+++ b/category.html
@@ -25,14 +25,14 @@
     <!-- main content -->
     <main>
         <label>
-            <input type="text" name="search">
+            <input type="search" name="search" autocomplete="off" placeholder=" Taper un nom">
             <img src="images/loupe.svg">
         </label>
         <!-- Bouton de navigation -->
         <ul>
             <li>
                 <button id="buttonData">
-                    <p>DATA</p>
+                    <p id="textButtonData">DATA</p>
                     <img alt="logo of Python, for DATA" src="images/logopython.svg" class="dataLogo">
                     <!--ajouter le lien-->
                 </button>
@@ -40,7 +40,7 @@
             </li>
             <li>
                 <button id="buttonJS">
-                    <p>JAVASCRIPT</p>
+                    <p id="textButtonJS">JAVASCRIPT</p>
                     <img alt="logo of JavaScript, for Web developers" src="images/logojs.svg" class="javascriptLogo">
                     <!--ajouter le lien-->
                 </button>
@@ -48,7 +48,7 @@
             </li>
             <li>
                 <button id="buttonStaff">
-                    <p>STAFF</p>
+                    <p id="textButtonStaff">STAFF</p>
                     <img alt="logo of Wild Code School, for Staff" src="images/logowildstaff.svg" class="staffLogo">
                     <!--ajouter le lien-->
                 </button>
