--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="WildCardS est le trombinoscope de février 2024 de la Wild Code School de Bordeaux">
     <title>Trombinoscope WCS Bordeaux 2024 | WildCardS</title>
-    <link rel="icon" href="images/favicon.png" />
+    <link rel="icon" href="images/favicon.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="cssforjs.css"> <!--fichier temporaire-->
 </head>
@@ -52,9 +52,6 @@
     </main>
     <script type="module" src="script.js"></script>
 
-</body>
-
-</main>
 </body>
 
 </html>
