--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <!-- Main content -->
     <main>
-        <p>Bienvenue sur le jeu de cartes / trombinoscope de la WildCodeSchool de Bordeaux 2024</p>
+        <p>Bienvenue sur le jeu de cartes / trombinoscope 2024 de la Wild Code School de Bordeaux !</p>
         <h2>Choisis ton Clan</h2>
         <section class="sliderContainer">
             <div class="slider">
