--- a/category.html
+++ b/category.html
@@ -28,12 +28,15 @@
     </header>
     <!-- main content -->
     <main>
-        <label>
-            <!-- Création conditions loupe: <input type="search" class="searchInput" name="term" autocomplete="off" placeholder="Search..." id="search-input"> -->
-            <!-- <input type="hidden" name="language" value="fr"> -->
-            <input type="search" name="search" autocomplete="off" placeholder=" Taper un nom">
-            <img src="images/search-svgrepo-com.svg" alt="bouton rechercher">
-        </label>
+        <section class="searchBar">
+            <label>
+                <!-- Création conditions loupe: <input type="search" class="searchInput" name="term" autocomplete="off" placeholder="Search..." id="search-input"> -->
+                <!-- <input type="hidden" name="language" value="fr"> -->
+                <input type="search" name="search" autocomplete="off" placeholder=" Taper un nom">
+                <img src="images/search-svgrepo-com.svg" alt="bouton rechercher">
+            </label>
+        </section>
+
         <!-- Bouton de navigation -->
         <ul>
             <li>
