--- a/category.html
+++ b/category.html
@@ -71,9 +71,9 @@
                 <div class="zoomedCard">
                     <div class="zoomedCardHeader">
                         <p class="zoomedCardName"></p>
-                        <img src="images/logopython.svg" class="zoomedCardLogo">
+                        <img src="" class="zoomedCardLogo">
                     </div>
-                    <div class="zoomedCardPictureContainer"><img src="images/photos/profilepic8.jpg"
+                    <div class="zoomedCardImgContainer"><img src="images/photos/profilepic8.jpg"
                             class="zoomedCardImg"></div>
                     <div>
                         <p class="zoomedCardAttack"></p>
@@ -86,9 +86,9 @@
                     <p class="cardGoals"></p>
                     <p class="cardEmail"></p>
                     <div class="socialLink">
-                        <a href=""><img src="images/logoLinkedin.svg" alt="logo LinkedIn" class="cardLinkedIn"></a>
-                        <a href=""><img src="images/logoX.svg" alt="logo X / Twitter" class="CardX"></a>
-                        <a href=""><img src="images/logogihub.svg" alt="logo github" class="cardGithub"></a>
+                        <a href="" class="cardLinkedIn"><img src="images/logoLinkedin.svg" alt="logo LinkedIn"></a>
+                        <a href="" class="cardTwitter"><img src="images/logoX.svg" alt="logo X / Twitter"></a>
+                        <a href="" class="cardGithub"><img src="images/logogihub.svg" alt="logo github"></a>
                     </div>
                 </div>
                 <img src="images/croix.svg" class="closeButton">
