--- a/category.html
+++ b/category.html
@@ -27,7 +27,7 @@
         <label>
             <!-- Création conditions loupe: <input type="search" class="searchInput" name="term" autocomplete="off" placeholder="Search..." id="search-input"> -->
             <!-- <input type="hidden" name="language" value="fr"> -->   
-            <input type="search" name="search" autocomplete="off" placeholder=" Taper un nom">
+            <input type="search" name="search" autocomplete="off" placeholder=" Enter à name">
             <img src="images/search-svgrepo-com.svg">
         </label>
         <!-- Bouton de navigation -->
