finalisation style du zoom, correction zoom.js, style.css et zoom.css

--- a/category.html
+++ b/category.html
@@ -82,8 +82,8 @@
                     </div>
                     <div class="zoomedCardImgContainer"><img src="images/photos/profilepic8.jpg"
                             class="zoomedCardImg"></div>
-                    <div class="zoomedCardAttack">
-                        <p ></p>
+                    <div class="attackContainer">
+                        <p class="zoomedCardAttack"></p>
                     </div>
                 </div>
                 <div class="zoomedCardInfo">
@@ -94,7 +94,7 @@
                     <p class="cardEmail"></p>
                     <div class="socialLink">
                         <a href="" class="cardLinkedIn"><img src="images/logoLinkedin.svg" alt="logo LinkedIn"></a>
-                        <a href="" class="cardTwitter"><img src="images/logoX.svg" alt="logo X / Twitter"></a>
+                        <a href="" class="cardTwitter"><img src="images/logox.png" alt="logo X / Twitter"></a>
                         <a href="" class="cardGithub"><img src="images/logogihub.svg" alt="logo github"></a>
                     </div>
                 </div>
