--- a/category.html
+++ b/category.html
@@ -41,9 +41,12 @@
         <ul>
             <li>
                 <button id="buttonData">
+                    <div id="logoButtonData"></div>
+                    <!-- <img src="images/logopython.svg" id="logoButtonData"> -->
                     <p id="textButtonData">DATA</p>
+                    <!-- <img src="images/sparkles-dark.svg" id="logoButtonSparkle"> -->
+                    <div id="logoButtonSparkle"></div>
                     <img alt="logo of Python, for DATA" src="images/logopython.svg" class="dataLogo">
-                    <!--ajouter le lien-->
                 </button>
 
             </li>
@@ -59,6 +62,13 @@
                 <button id="buttonStaff">
                     <p id="textButtonStaff">STAFF</p>
                     <img alt="logo of Wild Code School, for Staff" src="images/logowildstaff.svg" class="staffLogo">
+                    <!--ajouter le lien-->
+                </button>
+
+            </li>
+            <li>
+                <button id="buttonAll">
+                    <p id="textButtonAll">ALL</p>
                     <!--ajouter le lien-->
                 </button>
 
