Add filter search + global changes

--- a/category.html
+++ b/category.html
@@ -85,8 +85,8 @@
                         <p class="zoomedCardName"></p>
                         <img src="" class="zoomedCardLogo">
                     </div>
-                    <div class="zoomedCardImgContainer"><img src="images/photos/profilepic8.jpg"
-                            class="zoomedCardImg"></div>
+                    <div class="zoomedCardImgContainer"><img src="images/photos/profilepic8.jpg" class="zoomedCardImg">
+                    </div>
                     <div class="attackContainer">
                         <p class="zoomedCardAttack"></p>
                     </div>
@@ -110,7 +110,7 @@
                 alt="image de fond avec le logo de l'équipe"></div> -->
     </main>
     <script type="module" src="script.js"></script>
-    <!-- <script type="module" src="search.js"></script> -->
+    <script type="module" src="search.js"></script>
 </body>
 
 </html>
